force-app/main/default/objects/Participant_Time__c/Participant_Time__c.object-meta.xml
<CustomObject>
    <label>Participant Time</label>
    <nameField>
        <displayFormat>ParticipantTime - {00000}</displayFormat>
        <label>Participant Time #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>