force-app/main/default/objects/Participant_Time__c/fields/Daylight_Savings_Time__c.field-meta.xml
<CustomField>
    <fullName>Daylight_Savings_Time__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should be turned to Default Value Checked during DST and turned to Unchecked when DST is over.</description>
    <label>Daylight Savings Time</label>
    <type>Checkbox</type>
</CustomField>