force-app/main/default/objects/Participant_Time__c/fields/Inactive_Punch_Check__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Punch_Check__c</fullName>
    <formula>if(Participant_Time_Date__c &gt; Case_Record__r.Inactive_Date__c, &quot;Inactive Punch&quot;, 

if (contains(text(Case_Record__r.Status__c), &quot;Prospective&quot;), &quot;Prospective Punch&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Punch Check</label>
    <type>Text</type>
</CustomField>