force-app/main/default/objects/Participant_Time__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>South Side</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cara Central</fullName>
            </value>
            <value>
                <fullName>Northwest Center</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>