force-app/main/default/objects/Participant_Time__c/fields/Participant_Date_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Participant_Date_Time_In__c</fullName>
    <label>Participant Date/Time In</label>
    <type>DateTime</type>
</CustomField>