force-app/main/default/objects/Participant_Time__c/fields/Participant_Date_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Participant_Date_Time_Out__c</fullName>
    <label>Participant Date/Time Out</label>
    <type>DateTime</type>
</CustomField>