force-app/main/default/objects/Participant_Time__c/fields/Participant_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Participant_Time_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Participant Time Date</label>
    <type>Date</type>
</CustomField>