force-app/main/default/objects/Participant_Time__c/fields/Participant_Time_Notes__c.field-meta.xml
<CustomField>
    <fullName>Participant_Time_Notes__c</fullName>
    <label>Participant Time Notes</label>
    <type>TextArea</type>
</CustomField>