force-app/main/default/objects/Participant_Time__c/fields/Participant_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Participant_Time_Out__c</fullName>
    <formula>if(Daylight_Savings_Time__c, 

if (not (isblank(Participant_Time_Out_Override__c)), Participant_Time_Out_Override__c, 

if (isnull (Participant_Date_Time_Out__c), null,

IF( 
OR( 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 5/24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 5/24 ), 12, 2 ) ) = 12 
), 
&quot;12&quot;, 
TEXT( VALUE( MID( TEXT( Participant_Date_Time_Out__c - 5/24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 5/24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( Participant_Date_Time_Out__c - 5/24 ), 15, 2 ) 
&amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 5/24 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)

)),

if (not (isblank(Participant_Time_Out_Override__c)), Participant_Time_Out_Override__c, 

if (isnull (Participant_Date_Time_Out__c), null,

IF( 
OR( 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 6/24 ), 12, 2 ) ) = 0, 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 6/24 ), 12, 2 ) ) = 12 
), 
&quot;12&quot;, 
TEXT( VALUE( MID( TEXT( Participant_Date_Time_Out__c - 6/24 ), 12, 2 ) ) 
- 
IF( 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 6/24 ), 12, 2 ) ) &lt; 12, 
0, 
12 
) 
) 
) 
&amp; &quot;:&quot; &amp; 
MID( TEXT( Participant_Date_Time_Out__c - 6/24 ), 15, 2 ) 
&amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( Participant_Date_Time_Out__c - 6/24 ), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant Time Out</label>
    <type>Text</type>
</CustomField>