force-app/main/default/objects/Participant_Time__c/fields/Participant_Time_Out_Override__c.field-meta.xml
<CustomField>
    <fullName>Participant_Time_Out_Override__c</fullName>
    <label>Participant Time Out Override</label>
    <length>8</length>
    <type>Text</type>
</CustomField>