force-app/main/default/objects/Participant_Time__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <formula>text(Case_Record__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Status</label>
    <type>Text</type>
</CustomField>