force-app/main/default/objects/Participant_Time__c/fields/Student_ID_from_Clock_In__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_from_Clock_In__c</fullName>
    <label>Student ID from Clock-In</label>
    <length>5</length>
    <type>Text</type>
</CustomField>