force-app/main/default/objects/Participant_Time__c/fields/Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Time_Difference__c</fullName>
    <formula>timevalue( Participant_Date_Time_Out__c ) - timevalue ( Participant_Date_Time_In__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>