force-app/main/default/objects/Participant_Time__c/fields/Time_In__c.field-meta.xml
<CustomField>
    <fullName>Time_In__c</fullName>
    <formula>if(Daylight_Savings_Time__c,

if (isnull (Participant_Date_Time_In__c), null, 

TIMEVALUE(Participant_Date_Time_In__c - 5/24)

)

,


if (isnull (Participant_Date_Time_In__c), null, 

TIMEVALUE(Participant_Date_Time_In__c - 6/24)

)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time In</label>
    <type>Time</type>
</CustomField>