force-app/main/default/objects/Participant_Time__c/fields/Time_In_Override__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Override__c</fullName>
    <label>Time In Override</label>
    <type>Time</type>
</CustomField>