force-app/main/default/objects/Participant_Time__c/fields/Time_In_Override_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Override_Conversion__c</fullName>
    <formula>IF(
AND(
RIGHT( Participant_Time_In_Override__c , 2) = &quot;pm&quot;,
LEN(Participant_Time_In_Override__c ) = 7
), 
CASE(LEFT(Participant_Time_In_Override__c , 1),
&quot;1&quot;,&quot;13&quot;,
&quot;2&quot;,&quot;14&quot;,
&quot;3&quot;,&quot;15&quot;,
&quot;4&quot;,&quot;16&quot;,
&quot;5&quot;,&quot;17&quot;,
&quot;6&quot;,&quot;18&quot;,
&quot;7&quot;,&quot;19&quot;,
&quot;8&quot;,&quot;20&quot;,
&quot;9&quot;,&quot;21&quot;,
&quot;10&quot;,&quot;22&quot;,
&quot;11&quot;,&quot;23&quot;,
&quot;12&quot;
),


IF(
AND(
RIGHT(Participant_Time_In_Override__c , 2) = &quot;pm&quot;,
LEN(Participant_Time_In_Override__c ) = 8
), 
CASE(LEFT(Participant_Time_In_Override__c , 2),
&quot;10&quot;,&quot;22&quot;,
&quot;11&quot;,&quot;23&quot;,
&quot;00&quot;
),

IF(LEN(Participant_Time_In_Override__c ) = 7, LEFT(Participant_Time_In_Override__c , 1),

LEFT(Participant_Time_In_Override__c , 2))))

&amp;&quot;:&quot;&amp;
IF(LEN(Participant_Time_In_Override__c ) = 7, MID(Participant_Time_In_Override__c , 3, 2), MID(Participant_Time_In_Override__c , 4, 2))
&amp;&quot;:00&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time In Override Conversion</label>
    <type>Text</type>
</CustomField>