force-app/main/default/objects/Participant_Time__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <formula>if(Daylight_Savings_Time__c, 

if (not (isblank(Time_Out_Override__c)), Time_Out_Override__c, 

if (isnull (Participant_Date_Time_Out__c), null, 

TIMEVALUE(Participant_Date_Time_Out__c - 5/24) 

)) 

, 

if (not (isblank(Time_Out_Override__c)), Time_Out_Override__c, 

if (isnull (Participant_Date_Time_Out__c), null, 

TIMEVALUE(Participant_Date_Time_Out__c - 6/24) 

)) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Out</label>
    <type>Time</type>
</CustomField>