force-app/main/default/objects/Participant_Time__c/fields/Time_Out_Override__c.field-meta.xml
<CustomField>
    <fullName>Time_Out_Override__c</fullName>
    <description>&quot;2:40 PM&quot;, &quot;14:40&quot;, &quot;14:40:00&quot;, and &quot;14:40:50.600&quot; are all valid times for this field.</description>
    <inlineHelpText>Enter time in HH:MM AM/PM.</inlineHelpText>
    <label>Time Out Override</label>
    <type>Time</type>
</CustomField>