force-app/main/default/objects/Participant_Time__c/fields/Total_Hours_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Conversion__c</fullName>
    <formula>floor(mod(Total_Hours__c ,24))

+

mod(Total_Minutes__c ,60)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours in HH.MM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>