force-app/main/default/objects/Participant_Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Student_ID_from_Clock_In__c</field>
        <operation>equals</operation>
        <value>90201</value>
    </filters>
    <label>All</label>
</ListView>